antlr_generated/IfElseSubsetParser.py
# Generated from grammar/IfElseSubset.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class IfElseSubsetParser ( Parser ):

    grammarFileName = "IfElseSubset.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'>='", "'<='", "'=='", 
                     "'!='", "'//'", "'>'", "'<'", "'='", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "';'", "':'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "GE", "LE", "EQ", "NE", 
                      "IDIV", "GT", "LT", "ASSIGN", "PLUS", "MINUS", "STAR", 
                      "DIV", "MOD", "SEMI", "COLON", "LPAREN", "RPAREN", 
                      "INT", "ID", "NL", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_ifStmt = 1
    RULE_cond = 2
    RULE_relOp = 3
    RULE_expr = 4
    RULE_term = 5
    RULE_factor = 6
    RULE_suite = 7
    RULE_stmt = 8

    ruleNames =  [ "program", "ifStmt", "cond", "relOp", "expr", "term", 
                   "factor", "suite", "stmt" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    GE=3
    LE=4
    EQ=5
    NE=6
    IDIV=7
    GT=8
    LT=9
    ASSIGN=10
    PLUS=11
    MINUS=12
    STAR=13
    DIV=14
    MOD=15
    SEMI=16
    COLON=17
    LPAREN=18
    RPAREN=19
    INT=20
    ID=21
    NL=22
    WS=23
    COMMENT=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStmt(self):
            return self.getTypedRuleContext(IfElseSubsetParser.IfStmtContext,0)


        def EOF(self):
            return self.getToken(IfElseSubsetParser.EOF, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(IfElseSubsetParser.NL)
            else:
                return self.getToken(IfElseSubsetParser.NL, i)

        def getRuleIndex(self):
            return IfElseSubsetParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = IfElseSubsetParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self.ifStmt()
            self.state = 22
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22:
                self.state = 19
                self.match(IfElseSubsetParser.NL)
                self.state = 24
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 25
            self.match(IfElseSubsetParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(IfElseSubsetParser.IF, 0)

        def cond(self):
            return self.getTypedRuleContext(IfElseSubsetParser.CondContext,0)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(IfElseSubsetParser.COLON)
            else:
                return self.getToken(IfElseSubsetParser.COLON, i)

        def suite(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IfElseSubsetParser.SuiteContext)
            else:
                return self.getTypedRuleContext(IfElseSubsetParser.SuiteContext,i)


        def ELSE(self):
            return self.getToken(IfElseSubsetParser.ELSE, 0)

        def SEMI(self):
            return self.getToken(IfElseSubsetParser.SEMI, 0)

        def getRuleIndex(self):
            return IfElseSubsetParser.RULE_ifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = IfElseSubsetParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_ifStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self.match(IfElseSubsetParser.IF)
            self.state = 28
            self.cond()
            self.state = 29
            self.match(IfElseSubsetParser.COLON)
            self.state = 30
            self.suite()
            self.state = 31
            self.match(IfElseSubsetParser.ELSE)
            self.state = 32
            self.match(IfElseSubsetParser.COLON)
            self.state = 33
            self.suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IfElseSubsetParser.ExprContext)
            else:
                return self.getTypedRuleContext(IfElseSubsetParser.ExprContext,i)


        def relOp(self):
            return self.getTypedRuleContext(IfElseSubsetParser.RelOpContext,0)


        def getRuleIndex(self):
            return IfElseSubsetParser.RULE_cond

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond" ):
                return visitor.visitCond(self)
            else:
                return visitor.visitChildren(self)




    def cond(self):

        localctx = IfElseSubsetParser.CondContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_cond)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.expr()
            self.state = 37
            self.relOp()
            self.state = 38
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GT(self):
            return self.getToken(IfElseSubsetParser.GT, 0)

        def LT(self):
            return self.getToken(IfElseSubsetParser.LT, 0)

        def GE(self):
            return self.getToken(IfElseSubsetParser.GE, 0)

        def LE(self):
            return self.getToken(IfElseSubsetParser.LE, 0)

        def EQ(self):
            return self.getToken(IfElseSubsetParser.EQ, 0)

        def NE(self):
            return self.getToken(IfElseSubsetParser.NE, 0)

        def getRuleIndex(self):
            return IfElseSubsetParser.RULE_relOp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelOp" ):
                return visitor.visitRelOp(self)
            else:
                return visitor.visitChildren(self)




    def relOp(self):

        localctx = IfElseSubsetParser.RelOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_relOp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 888) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IfElseSubsetParser.TermContext)
            else:
                return self.getTypedRuleContext(IfElseSubsetParser.TermContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(IfElseSubsetParser.PLUS)
            else:
                return self.getToken(IfElseSubsetParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(IfElseSubsetParser.MINUS)
            else:
                return self.getToken(IfElseSubsetParser.MINUS, i)

        def getRuleIndex(self):
            return IfElseSubsetParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = IfElseSubsetParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.term()
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11 or _la==12:
                self.state = 43
                _la = self._input.LA(1)
                if not(_la==11 or _la==12):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 44
                self.term()
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IfElseSubsetParser.FactorContext)
            else:
                return self.getTypedRuleContext(IfElseSubsetParser.FactorContext,i)


        def STAR(self, i:int=None):
            if i is None:
                return self.getTokens(IfElseSubsetParser.STAR)
            else:
                return self.getToken(IfElseSubsetParser.STAR, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(IfElseSubsetParser.DIV)
            else:
                return self.getToken(IfElseSubsetParser.DIV, i)

        def MOD(self, i:int=None):
            if i is None:
                return self.getTokens(IfElseSubsetParser.MOD)
            else:
                return self.getToken(IfElseSubsetParser.MOD, i)

        def IDIV(self, i:int=None):
            if i is None:
                return self.getTokens(IfElseSubsetParser.IDIV)
            else:
                return self.getToken(IfElseSubsetParser.IDIV, i)

        def getRuleIndex(self):
            return IfElseSubsetParser.RULE_term

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = IfElseSubsetParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.factor()
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 57472) != 0):
                self.state = 51
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 57472) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 52
                self.factor()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(IfElseSubsetParser.INT, 0)

        def ID(self):
            return self.getToken(IfElseSubsetParser.ID, 0)

        def LPAREN(self):
            return self.getToken(IfElseSubsetParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(IfElseSubsetParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(IfElseSubsetParser.RPAREN, 0)

        def getRuleIndex(self):
            return IfElseSubsetParser.RULE_factor

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = IfElseSubsetParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_factor)
        try:
            self.state = 64
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20]:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.match(IfElseSubsetParser.INT)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.match(IfElseSubsetParser.ID)
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.match(IfElseSubsetParser.LPAREN)
                self.state = 61
                self.expr()
                self.state = 62
                self.match(IfElseSubsetParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SuiteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(IfElseSubsetParser.StmtContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(IfElseSubsetParser.NL)
            else:
                return self.getToken(IfElseSubsetParser.NL, i)

        def getRuleIndex(self):
            return IfElseSubsetParser.RULE_suite

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSuite" ):
                return visitor.visitSuite(self)
            else:
                return visitor.visitChildren(self)




    def suite(self):

        localctx = IfElseSubsetParser.SuiteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_suite)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22:
                self.state = 66
                self.match(IfElseSubsetParser.NL)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            self.stmt()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22:
                self.state = 73
                self.match(IfElseSubsetParser.NL)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(IfElseSubsetParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(IfElseSubsetParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(IfElseSubsetParser.ExprContext,0)


        def getRuleIndex(self):
            return IfElseSubsetParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = IfElseSubsetParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(IfElseSubsetParser.ID)
            self.state = 80
            self.match(IfElseSubsetParser.ASSIGN)
            self.state = 81
            self.expr()
            self.state = 82
            self.match(IfElseSubsetParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





